# sandbox

./: README.md
mujoco_simulation_cpp/helpers/: helper.ipynb  lidar_rangefinder.xml  lidar_sites.xml
mujoco_simulation_cpp/include/: angles.h  controllers.h  simulation.h
mujoco_simulation_cpp/models/: inverted_pendulum.xml  model_sources.txt  quadrotor_plus.xml
mujoco_simulation_cpp/src/: CMakeLists.txt  angles.cpp  controllers.cpp  main.cpp  simulation.cpp
robust_control/: h_inf.ipynb
spline_trajectory_optimization/: traj_optim.ipynb
spline_trajectory_optimization/.ipynb_checkpoints/: traj_optim-checkpoint.ipynb
